--- a/style.css
+++ b/style.css
@@ -94,6 +94,10 @@ body {
   justify-content: center;
 }
 
+#close {
+  display: none;
+}
+
 #navbar li {
   list-style: none;
   padding: 0 20px;
@@ -546,6 +550,11 @@ footer .copyright {
     background-color: #e3e6f3;
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active {
+    right: 0px;
   }
 
   #navbar li {
@@ -560,5 +569,18 @@ footer .copyright {
     color: #1a1a1a;
     font-size: 24px;
     padding-left: 20px;
+  }
+
+  #close {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+    display: initial;
+  }
+
+  #lg-bag {
+    display: none;
   }
 }
