--- a/style.css
+++ b/style.css
@@ -538,6 +538,10 @@ footer .copyright {
 }
 
 @media (max-width: 799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+
   #navbar {
     flex-direction: column;
     align-items: flex-start;
@@ -588,5 +592,13 @@ footer .copyright {
     height: 70vh;
     background-position: top 30% right 30%;
     padding: 0 80px;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
   }
 }
