--- a/style.css
+++ b/style.css
@@ -601,4 +601,12 @@ footer .copyright {
   #feature .fe-box {
     margin: 15px 15px;
   }
+
+  #product1 .pro-container {
+    justify-content: center;
+  }
+
+  #product1 .pro {
+    margin: 15px;
+  }
 }
