--- a/style.css
+++ b/style.css
@@ -613,4 +613,9 @@ footer .copyright {
   #banner {
     height: 20vh;
   }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 30vh;
+  }
 }
