--- a/style.css
+++ b/style.css
@@ -618,4 +618,12 @@ footer .copyright {
     min-width: 100%;
     height: 30vh;
   }
+
+  #banner3 {
+    padding: 0 40px;
+  }
+
+  #banner3 .banner-box {
+    width: 28%;
+  }
 }
