--- a/style.css
+++ b/style.css
@@ -556,6 +556,24 @@ footer .copyright {
   color: #fff;
 }
 
+#pagination {
+  text-align: center;
+}
+
+#pagination a {
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 600;
+}
+
+#pagination a i {
+  font-size: 16px;
+  font-weight: 600;
+}
+
 @media (max-width: 799px) {
   .section-p1 {
     padding: 40px 40px;
