complete shop page

--- a/style.css
+++ b/style.css
@@ -796,4 +796,16 @@ footer .copyright {
   footer .copyright {
     text-align: start;
   }
+
+  /* Single Product */
+  #prodetails {
+    flex-direction: column;
+  }
+  #prodetails .single-pro-image {
+    width: 100%;
+    margin-right: 0px;
+  }
+  #prodetails .single-pro-details {
+    width: 100%;
+  }
 }
