--- a/style.css
+++ b/style.css
@@ -648,6 +648,7 @@ footer .copyright {
   display: flex;
   align-items: center;
   width: 100%;
+  position: relative;
 }
 
 #blog .blog-img {
@@ -690,6 +691,16 @@ footer .copyright {
 
 #blog .blog-details a:hover::after {
   background-color: #088178;
+}
+
+#blog .blog-box h1 {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  font-size: 70px;
+  font-weight: 700;
+  color: #c9cbce;
+  z-index: -1;
 }
 
 /* About Page */
