add all the blogs

--- a/style.css
+++ b/style.css
@@ -649,6 +649,7 @@ footer .copyright {
   align-items: center;
   width: 100%;
   position: relative;
+  padding-bottom: 90px;
 }
 
 #blog .blog-img {
