--- a/style.css
+++ b/style.css
@@ -723,6 +723,22 @@ footer .copyright {
   padding-left: 40px;
 }
 
+#about-app {
+  text-align: center;
+}
+
+#about-app .video {
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0 auto;
+}
+
+#about-app .video video {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
 /* Contact page */
 
 @media (max-width: 799px) {
