--- a/style.css
+++ b/style.css
@@ -933,4 +933,22 @@ footer .copyright {
   #blog .blog-details {
     width: 100%;
   }
+
+  /* About page */
+  #about-head {
+    flex-direction: column;
+  }
+
+  #about-head img {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  #about-head div {
+    padding-left: 0;
+  }
+
+  #about-app .video {
+    width: 100%;
+  }
 }
