--- a/style.css
+++ b/style.css
@@ -575,6 +575,7 @@ footer .copyright {
 }
 
 /* Single Product */
+
 #prodetails {
   display: flex;
   margin-top: 20px;
@@ -636,6 +637,7 @@ footer .copyright {
 }
 
 /* Blog Page */
+
 #page-header.blog-header {
   background-image: url("img/banner/b19.jpg");
 }
@@ -740,6 +742,49 @@ footer .copyright {
 }
 
 /* Contact page */
+
+#contact-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#contact-details .details {
+  width: 40%;
+}
+
+#contact-details .details span {
+  font-size: 12px;
+}
+
+#contact-details .details h2 {
+  font-size: 26px;
+  line-height: 35px;
+  padding: 20px 0;
+}
+
+#contact-details .details h3 {
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+
+#contact-details .details li {
+  list-style: none;
+  display: flex;
+  padding: 10px 0;
+}
+
+#contact-details .details li i {
+  font-size: 14px;
+  padding-right: 22px;
+}
+
+#contact-details .details li p {
+  margin: 0;
+  font-size: 14px;
+}
+
+/* Start media Query */
 
 @media (max-width: 799px) {
   .section-p1 {
