--- a/style.css
+++ b/style.css
@@ -784,6 +784,16 @@ footer .copyright {
   font-size: 14px;
 }
 
+#contact-details .map {
+  width: 55%;
+  height: 400px;
+}
+
+#contact-details iframe {
+  width: 100%;
+  height: 100%;
+}
+
 /* Start media Query */
 
 @media (max-width: 799px) {
