--- a/style.css
+++ b/style.css
@@ -817,6 +817,29 @@ footer .copyright {
   color: #fff;
 }
 
+#form-details .people div {
+  padding-bottom: 25px;
+}
+
+#form-details .people div img {
+  width: 65px;
+  height: 65px;
+  object-fit: cover;
+  margin-right: 15px;
+}
+
+#form-details .people div p {
+  margin: 0;
+  font-size: 13px;
+  line-height: 25px;
+}
+
+#form-details .people div p span {
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: #000;
+}
 /* Start media Query */
 
 @media (max-width: 799px) {
