style form section

--- a/style.css
+++ b/style.css
@@ -796,6 +796,14 @@ footer .copyright {
   height: 100%;
 }
 
+#form-details {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 80px;
+  border: 1px solid #e1e1e1;
+}
+
 #form-details form {
   width: 65%;
   display: flex;
@@ -819,6 +827,8 @@ footer .copyright {
 
 #form-details .people div {
   padding-bottom: 25px;
+  display: flex;
+  align-items: flex-start;
 }
 
 #form-details .people div img {
