--- a/style.css
+++ b/style.css
@@ -945,6 +945,15 @@ footer .copyright {
   #newsletter .form {
     width: 70%;
   }
+
+  /* Contact page */
+  #form-details {
+    padding: 40px;
+  }
+
+  #form-details form {
+    width: 50%;
+  }
 }
 
 @media (max-width: 477px) {
@@ -1061,5 +1070,31 @@ footer .copyright {
 
   #about-app .video {
     width: 100%;
+  }
+
+  /* Contact page */
+
+  #contact-details {
+    flex-direction: column;
+  }
+
+  #contact-details .details {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  #contact-details .map {
+    width: 100%;
+  }
+
+  #form-details {
+    margin: 10px;
+    padding: 30px 10px;
+    flex-wrap: wrap;
+  }
+
+  #form-details form {
+    width: 100%;
+    margin-bottom: 30px;
   }
 }
