make the web responsive

--- a/style.css
+++ b/style.css
@@ -852,6 +852,11 @@ footer .copyright {
 }
 
 /* Cart Page */
+
+#cart {
+  overflow-x: auto;
+}
+
 #cart table {
   width: 100%;
   border-collapse: collapse;
@@ -1207,5 +1212,20 @@ footer .copyright {
   #form-details form {
     width: 100%;
     margin-bottom: 30px;
+  }
+
+  /* Cart page */
+
+  #cart-add {
+    flex-direction: column;
+  }
+
+  #cart-add #coupon {
+    width: 100%;
+  }
+
+  #subtotal {
+    width: 100%;
+    padding: 20px;
   }
 }
